alignment of textarea and feed fixed

--- a/public/styles/feed.css
+++ b/public/styles/feed.css
@@ -56,3 +56,7 @@
 #at {
   margin-left: auto;
 }
+
+#tweet-buttons img {
+  width: 36px;
+}
