--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -8,3 +8,14 @@ header {
   background-color: #25008a;
   background-image: url("https://www.transparenttextures.com/patterns/argyle.png");
 }
+
+.yrname {
+  color: white;
+}
+
+/* desktop break point */
+@media only screen and (min-width: 1024px) {
+  header {
+    margin: 40px;
+  }
+}
