--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -27,11 +27,8 @@ body {
   flex-direction: column;
   align-items: center;
   background-color:white;
-  margin: auto;
-}
-
-#tweet-buttons img {
-  width: 36px;
+  margin: 0 2%;
+  justify-content: center;
 }
 
 #allContent {
@@ -42,10 +39,6 @@ body {
 /* tablet break point */
 @media only screen and (min-width: 768px) {
 
-  .container {
-    width: 80%;
-  }
-
   .flex-grid {
     display: block;
   }
@@ -55,6 +48,5 @@ body {
 @media only screen and (min-width: 1024px) {
   #allContent {
     flex-direction: row;
-
   }
 }
